# framework

./: .gitignore  CMakeLists.txt  README.md
TodoList/: CMakeLists.txt  TodoContainer.cpp  TodoContainer.h  TodoElement.cpp  TodoElement.h  main.cpp
serie1/: CMakeLists.txt  es1.cpp  es2.cpp  es3.cpp  es4.cpp  main.cpp  serie1.pro
serie2/: CMakeLists.txt  Convertitore.cpp  Convertitore.h  s2e1.cpp  s2e2.cpp  s2main.cpp
serie2/res/: values.txt
serie3/: CMakeLists.txt  Frazione.cpp  Frazione.h  s3e2.cpp  s3main.cpp
teoria/: CMakeLists.txt  frazione.cpp  frazione.h  main.cpp  teoria.pro
test/: Alpha.cpp  Alpha.h  CMakeLists.txt  main.cpp
